# GaussInteract

./: .gitignore  COMPETITIVE.md  CONTRIBUTING.md  PRIVACY.md  README.md  REUSE.toml  ROADMAP.md  SECURITY.md  config.sample.json  pubspec.yaml
.github/: CODEOWNERS  FUNDING.yml  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: config.yml  issue_pr_management.yml  test_report.md
.github/workflows/: gauss-core.yaml  gauss-matrix.yaml  matrix_notify.yaml  release.yaml
android/app/: build.gradle.kts
android/fastlane/: Appfile
gauss-core/: Cargo.toml  README.md  deny.toml  rust-toolchain.toml
gauss-core/src/: agent.rs  e2ee.rs  error.rs  events.rs  lib.rs  session.rs  store.rs  sync.rs  timeline.rs
gauss-matrix/: Cargo.toml  README.md  deny.toml  rust-toolchain.toml
gauss-matrix/crates/gm-agent/: Cargo.toml
gauss-matrix/crates/gm-agent/src/: appservice.rs  audit.rs  capability.rs  catalog.rs  clock.rs  events.rs  lib.rs  mcp.rs  memory.rs  policy.rs  replay.rs  resources.rs  roster.rs
gauss-matrix/crates/gm-agent/tests/: end_to_end.rs
gauss-matrix/crates/gm-api/: Cargo.toml
gauss-matrix/crates/gm-api/src/: auth.rs  error.rs  events.rs  json.rs  lib.rs  pdu.rs  redaction.rs  room_version.rs  server.rs
gauss-matrix/crates/gm-e2ee/: Cargo.toml
gauss-matrix/crates/gm-e2ee/src/: lib.rs
gauss-matrix/crates/gm-fed/: Cargo.toml
gauss-matrix/crates/gm-fed/src/: auth.rs  ed25519.rs  lib.rs
gauss-matrix/crates/gm-http/: Cargo.toml
gauss-matrix/crates/gm-http/src/: auth.rs  ingress.rs  lib.rs  router.rs  transport.rs
gauss-matrix/crates/gm-http/tests/: server_integration.rs
gauss-matrix/crates/gm-obs/: Cargo.toml
gauss-matrix/crates/gm-obs/src/: lib.rs  metrics.rs  siem.rs
gauss-matrix/crates/gm-server/: Cargo.toml
gauss-matrix/crates/gm-server/src/: main.rs
gauss-matrix/crates/gm-shard/: Cargo.toml
gauss-matrix/crates/gm-shard/src/: lib.rs
gauss-matrix/crates/gm-stateres/: Cargo.toml
gauss-matrix/crates/gm-stateres/src/: auth.rs  lib.rs
gauss-matrix/crates/gm-store/: Cargo.toml
gauss-matrix/crates/gm-store/src/: audit.rs  file.rs  lib.rs  memory.rs  rocks.rs  shared.rs
gauss-matrix/crates/gm-svc/: Cargo.toml
gauss-matrix/crates/gm-svc/src/: accounts.rs  codec.rs  lib.rs  server.rs  session.rs
gauss-matrix/crates/gm-util/: Cargo.toml
gauss-matrix/crates/gm-util/src/: error.rs  hashing.rs  ids.rs  lib.rs
integration_test/flows/: auth_flows.dart  chat_flows.dart
integration_test/utils/: fluffy_chat_tester.dart
ios/Flutter/ephemeral/: flutter_native_integration.env
ios/Notification Service Extension/: Notification Service Extension.entitlements  NotificationService.swift
ios/Runner/: GoogleService-Info.plist  Info.plist  Runner.entitlements
ios/Runner.xcodeproj/: project.pbxproj
ios/fastlane/: Appfile  Fastfile
lib/: main.dart
lib/config/: app_config.dart  routes.dart  setting_keys.dart  themes.dart
lib/l10n/: intl_ar.arb  intl_be.arb  intl_ca.arb  intl_cs.arb  intl_de.arb  intl_en.arb  intl_eo.arb  intl_es.arb  intl_et.arb  intl_eu.arb  intl_fa.arb  intl_fi.arb  intl_fil.arb  intl_fr.arb  intl_ga.arb  intl_gl.arb  intl_he.arb  intl_hr.arb  intl_hu.arb  intl_id.arb  intl_ie.arb  intl_it.arb  intl_ja.arb  intl_kab.arb  intl_ko.arb  intl_lt.arb  intl_lv.arb  intl_nb.arb  intl_nl.arb  intl_pl.arb  intl_pt_BR.arb  intl_pt_PT.arb  intl_ro.arb  intl_ru.arb  intl_sk.arb  intl_sr.arb  intl_sv.arb  intl_ta.arb  intl_th.arb  intl_tr.arb  (+4 more)
lib/pages/agent/: agent_approval_card.dart  agent_audit_view.dart  agent_capability_view.dart  agent_console.dart
lib/pages/archive/: archive.dart  archive_view.dart
lib/pages/bootstrap/: bootstrap_dialog.dart
lib/pages/chat/: chat.dart  chat_app_bar_list_tile.dart  chat_app_bar_title.dart  chat_emoji_picker.dart  chat_event_list.dart  chat_input_row.dart  chat_view.dart  command_hints.dart  encrpytion_info.dart  event_info_dialog.dart  input_bar.dart  pinned_events.dart  recording_input_row.dart  recording_view_model.dart  reply_display.dart  seen_by_row.dart  send_file_dialog.dart  send_location_dialog.dart  start_poll_bottom_sheet.dart  sticker_picker_dialog.dart  trust_user_key_dialog.dart  typing_indicators.dart
lib/pages/chat_access_settings/: chat_access_settings_controller.dart  chat_access_settings_page.dart
lib/pages/chat_details/: chat_details.dart  chat_details_view.dart  participant_list_item.dart
lib/pages/chat_encryption_settings/: chat_encryption_settings.dart  chat_encryption_settings_view.dart
lib/pages/chat_list/: chat_list.dart  chat_list_body.dart  chat_list_header.dart  chat_list_item.dart  space_view.dart  (+5 more)
lib/utils/: adaptive_bottom_sheet.dart  background_push.dart  client_manager.dart  custom_http_client.dart  date_time_extension.dart  error_reporter.dart  file_selector.dart  fluffy_share.dart  init_with_restore.dart  localized_exception_extension.dart  markdown_context_builder.dart  notification_background_handler.dart  platform_infos.dart  push_helper.dart  resize_video.dart  room_status_extension.dart  show_scaffold_dialog.dart  show_update_snackbar.dart  sync_status_localization.dart  uia_request_manager.dart  url_launcher.dart  voip_plugin.dart
lib/widgets/: app_lock.dart  avatar.dart  chat_settings_popup_menu.dart  config_viewer.dart  fluffy_chat_app.dart  future_loading_dialog.dart  local_notifications_extension.dart  lock_screen.dart  matrix.dart  member_actions_popup_menu_button.dart  mxc_image.dart  mxc_image_viewer.dart  navigation_rail.dart  permission_slider_dialog.dart  presence_builder.dart  qr_code_viewer.dart  settings_switch_list_tile.dart  share_scaffold_dialog.dart  theme_builder.dart
linux/: CMakeLists.txt  my_application.cc
macos/Runner.xcodeproj/: project.pbxproj
scripts/: add-firebase-messaging.sh  build-ios.sh  build-macos.sh  generate_brand_assets.sh
snap/: snapcraft.yaml
snap/gui/: gaussinteract.desktop
test/: agent_console_test.dart  gauss_core_test.dart  homeserver_picker_test.dart  widget_test.dart
web/: index.html  manifest.json
windows/: CMakeLists.txt
windows/runner/: Runner.rc  main.cpp
(+96 files in other folders)
