# SPDX-FileCopyrightText: 2026-Present Gaussian Technologies
# SPDX-License-Identifier: Apache-2.0

[package]
name = "gm-agent"
description = "GaussMatrix agentic AI gateway: the sole, mediated, audited channel through which AI agents act in a room."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[lib]
name = "gm_agent"

[features]
default = []
# Enables the live MCP transport + ruma/axum wiring (adds dependencies). Off by
# default so the scaffold builds with no network/registry access.
mcp = []

[dependencies]
gm-store = { path = "../gm-store" }
gm-util = { path = "../gm-util" }
# Further deps the implementation will add: ruma (Matrix types), the
# Application Service client, an MCP transport, tokio, serde, thiserror.

[dev-dependencies]
