# SPDX-FileCopyrightText: 2026-Present Gaussian Technologies
# SPDX-License-Identifier: Apache-2.0

[package]
name = "gm-store"
description = "GaussMatrix pluggable storage abstraction: a backend-agnostic, column-family keyed store and the durable tamper-evident audit log."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[lib]
name = "gm_store"

[features]
default = []
# The RocksDB single-node-profile backend (RocksStore). The scaffold is
# dependency-free (an ordered in-memory map standing in for rocksdb::DB,
# fixing the on-disk key layout); the real `rocksdb` crate is added to this
# feature's dependency set once registry access is available. The distributed-KV
# (sharded) backend lands behind its own feature later.
rocksdb = []

[dependencies]

[dev-dependencies]
