# SPDX-FileCopyrightText: 2026-Present Gaussian Technologies
# SPDX-License-Identifier: Apache-2.0

[package]
name = "gm-store"
description = "GaussMatrix pluggable storage abstraction: a backend-agnostic, column-family keyed store and the durable tamper-evident audit log."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[lib]
name = "gm_store"

[features]
default = []
# The RocksDB single-node-profile backend (RocksStore), spec §III.A/C. Brings in
# the real `rocksdb` crate (compression libs off — this is a plain KV use). The
# distributed-KV (sharded) backend lands behind its own feature later.
rocksdb = ["dep:rocksdb"]

[dependencies]
rocksdb = { version = "0.22", optional = true, default-features = false }

[dev-dependencies]
